Fixed mobile menu visiblity on desktop version

--- a/style.css
+++ b/style.css
@@ -319,11 +319,11 @@ input:hover {
 /* typography */
 
 .popins {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 .playfair {
-  font-family: "Playfair Display", serif;
+  font-family: 'Playfair Display', serif;
 }
 
 /* grid  & flex */
@@ -344,6 +344,7 @@ header {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 5%;
+  position: sticky;
 }
 
 #menu-i {
@@ -353,11 +354,14 @@ header {
 }
 
 .mobile-nav {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
   width: 100%;
   height: 0;
   overflow: hidden;
-  position: fixed;
-  top: 0;
   z-index: 1000;
   transition: 0.6s ease-in-out;
 }
@@ -365,8 +369,7 @@ header {
 .open-menu {
   background-color: #fff;
   height: 100vh;
-  background-image:
-    url(assets/images/img_g1_mobile_menu.svg),
+  background-image: url(assets/images/img_g1_mobile_menu.svg),
     url(assets/images/img_g1_mobile_menu_b.svg);
   background-repeat: no-repeat, no-repeat;
   background-position: top left, bottom right;
@@ -383,6 +386,17 @@ header {
   justify-content: center;
   align-items: center;
   margin-top: 14.4rem;
+}
+
+.mobile-nav-links a:link,
+a:visited {
+  color: #1a2236;
+  text-decoration: none;
+}
+
+.mobile-nav-links a:hover,
+a:active {
+  text-decoration: #1a2236 underline;
 }
 
 .above-bg {
@@ -459,6 +473,11 @@ footer {
     justify-content: center;
     align-items: center;
     margin-bottom: 0;
+  }
+
+  .mobile-nav,
+  .open-menu {
+    display: none;
   }
 
   #menu-i {
@@ -555,13 +574,13 @@ footer {
     grid-template-rows: 6.41fr 2fr 1fr 1fr 2fr 3.16fr 3.1fr;
     grid-template-columns: 2.66fr 1fr 1fr 1fr 1.66fr 1fr;
     grid-template-areas:
-      "project-title project-1 project-1 project-1 project-1 project-1"
-      "project-2     bg-1      bg-1      bg-1      project-6 project-6"
-      "project-2     bg-1      bg-1      bg-1      project-6 project-6"
-      "project-2     bg-1      bg-1      bg-1      project-5 project-5"
-      "project-3     project-3 project-3 .         project-5 project-5"
-      "project-3     project-3 project-3 bg-2      bg-2      bg-2"
-      "bg-3          bg-3      bg-3      project-4 project-4 .";
+      'project-title project-1 project-1 project-1 project-1 project-1'
+      'project-2     bg-1      bg-1      bg-1      project-6 project-6'
+      'project-2     bg-1      bg-1      bg-1      project-6 project-6'
+      'project-2     bg-1      bg-1      bg-1      project-5 project-5'
+      'project-3     project-3 project-3 .         project-5 project-5'
+      'project-3     project-3 project-3 bg-2      bg-2      bg-2'
+      'bg-3          bg-3      bg-3      project-4 project-4 .';
     margin-bottom: 20rem;
   }
 
@@ -642,8 +661,7 @@ footer {
 
   #bg-3 {
     grid-area: bg-3;
-    background-image:
-      url(assets/images/bg-3.svg),
+    background-image: url(assets/images/bg-3.svg),
       url(assets/images/bg-3_v2.svg);
     background-repeat: no-repeat, no-repeat;
     background-position-x: left, right;
@@ -718,8 +736,7 @@ footer {
   }
 
   #contact-me {
-    background-image:
-      url(assets/images/contact-bg.svg),
+    background-image: url(assets/images/contact-bg.svg),
       url(assets/images/image-geometry_7.svg);
     background-repeat: no-repeat;
     background-position-x: left, right;
